--- a/app/src/main/res/layout/activity_down_image.xml
+++ b/app/src/main/res/layout/activity_down_image.xml
@@ -1,37 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".DownImageActivity">
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_images"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
     <LinearLayout
-        android:background="@color/white"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:gravity="end|center"
-        android:layout_height="50dp">
-        <TextView
-            android:id="@+id/tvSelectHint"
-            android:text="已选择"
-            android:layout_marginRight="12dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/tvSave"
-            android:text="保存图片"
-            android:gravity="center"
-            android:width="100dp"
-            android:textStyle="bold"
-            android:layout_marginEnd="12dp"
-            android:textColor="@color/white"
-            android:background="@drawable/ic_button_background"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"/>
+        android:layout_height="match_parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_images"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <LinearLayout
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:gravity="end|center"
+            android:layout_height="50dp">
+            <TextView
+                android:id="@+id/tvSelectHint"
+                android:text="已选择"
+                android:layout_marginRight="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/tvSave"
+                android:text="保存图片"
+                android:gravity="center"
+                android:width="100dp"
+                android:textStyle="bold"
+                android:layout_marginEnd="12dp"
+                android:textColor="@color/white"
+                android:background="@drawable/ic_button_background"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"/>
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+    <ScrollView
+        android:visibility="invisible"
+        android:background="@color/black"
+        android:id="@+id/svPreview"
+        android:layout_width="match_parent"
+        android:fillViewport="true"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/ivBigPreview"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:adjustViewBounds="true"
+            android:layout_height="wrap_content"/>
+    </ScrollView>
+</FrameLayout>
